--- a/src/assets/css/station3.css
+++ b/src/assets/css/station3.css
@@ -3,11 +3,11 @@
     background-color: #fff;
     padding: 20px;
   }
-.card_title p{
+p.card_title{
     color:#282828;
     font-size:14px;
 }
-.card__description p{
+p.card__description{
     color:#282828;
     font-size:12px;
 }
