--- a/src/assets/css/station4.css
+++ b/src/assets/css/station4.css
@@ -18,9 +18,9 @@ p.card__description{
     height: 182px;
 }
 
-footer{
+.head{
     background-color: #ffffff;
 }
-header {
+footer{
     background-color: #ffffff;
 }
