--- a/src/assets/css/station9.css
+++ b/src/assets/css/station9.css
@@ -1,5 +1,5 @@
 /* (PC) */
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1200px) {
 
     .card{
         background-color: #ffffff;
@@ -33,19 +33,19 @@
     }
 }
 /* （タブレット） */
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
 
     p.card__title{
         color:#282828;
-        font-size:4px;
+        font-size:8px;
     }
     p.card__description{
         color:#282828;
-        font-size:2px;
+        font-size:6px;
     }
 }
 /* （スマホ） */
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 320px) {
     p.card__description{
         display:none;
     }
